syntax = "proto3";

option go_package = ".;services";
import "google/api/annotations.proto";

message ProdRequset {
     int32 prod_id = 1;
}

message ProdResponse {
     int32 prod_stock=1;
}

service ProdService {
    rpc GetProdStock (ProdRequset) returns (ProdResponse) {
        option (google.api.http) = {
            get: "/v1/prod/{prod_id}"
        };
    }
}